@@ -1,3 +1,7 @@
++ fix the sfx decruncher to work for a wider range of i_load_addr values.
+  Bug reported by iAN CooG/HokutoForce.
++ Add optional offset,len for raw command file reading.
+
 2005-11-14
 Release of 2.0beta3 source code, win32 and dos binaries.
 + i_ram_exit bug for the C64 target found by iAN CooG/HokutoForce fixed.
